Kleopatra: Failed to copy the old group configuration to new location
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Jul 1 2024, 10:20 PM
Tags

Description

When starting Kleopatra I noticed

21:41:53.126 W org.kde.pim.kleopatra: Unable to copy the old group configuration to "/home/ingo/.gnupg/kleopatra/kleopatragroupsrc"

Reason: The folder /home/ingo/.gnupg/kleopatra didn't exist.

High priority because the users lose their group configuration. (The group configuration is still at the old location, but from the users' point-of-view all groups are gone in Kleopatra.)

Event Timeline

ikloecker triaged this task as High priority.
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Jul 1 2024, 10:40 PM
ikloecker moved this task from Backlog to WiP on the vsd33 board.

Fixed and backported for VSD 3.3.

Migrating kleopatragroupsrc to new location worked for update 3.2.2.0 to VS-Desktop-3.2.93.33-Beta on Windows.
kleopatragoupsrc in old location is not deleted, but a copy is written to %APPDATA%/gnupg/kleopatra

But when trying to make changes to that group it first looks as if it is possible (I removed half of the 6 certificates and renamed the group) but after closing the group configuration window and opening it again the renaming was still there but it was again 6 certificates in the group.
A new group can be created but again can't be changed persistently.

This is for the new location, the file in the old location is not updated at all, as expected.

In Debugview I see, after only opening the group configuration dialog:

31	1043.134342	5624	kleopatra.exe	org.kde.pim.kleopatra: GroupsConfigDialog(0x51051f0) loadGroups
32	1043.135916	5624	kleopatra.exe	org.kde.pim.kleopatra: open_or_raise showing window

After opening the group for editing:

33	1074.372279	5624	kleopatra.exe	org.kde.pim.kleopatra: GroupsConfigDialog(0x51051f0) saveGroups
34	1074.374000	5624	kleopatra.exe	org.kde.pim.libkleo: Updating group "neue Testgruppe 1" (id: "hZlZ3oBP", source: 1, keys: 2, isImmutable: false)
35	1074.374099	5624	kleopatra.exe	org.kde.pim.libkleo: writeGroup Writing config group "Group-hZlZ3oBP"
36	1074.374712	5624	kleopatra.exe	org.kde.pim.libkleo: Updating group "test-pgp3" (id: "liXIAFgt", source: 1, keys: 6, isImmutable: false)
37	1074.375772	5624	kleopatra.exe	org.kde.pim.libkleo: writeGroup Writing config group "Group-liXIAFgt"
38	1074.375862	5624	kleopatra.exe	org.kde.pim.kleopatra: onKeysMayHaveChanged ignoring changes caused by ourselves
39	1074.376028	5624	kleopatra.exe	org.kde.pim.kleopatra: GroupsConfigDialog(0x51051f0) loadGroups

And then nothing at all while making the changes and clicking "Save".

In contrast, in an older version where changing the group works, the order is as expected, write is executed after making changes and not before.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Migration works for upgrade to gpg4win.beta-50, too:
A copy of kleopatrarc is written to the nwely created folder %APPDATA%/gnupg/kleopatra

ebo edited projects, added vsd33 (vsd-3.3.0); removed vsd33.