Make sure that the folder for the group configuration exists

GnuPG-bug-id: 7181
(cherry picked from commit bf7c668b7acce1f4caf62b8983f233d7721246e0)